# rons-falcon

./: CLAUDE.md  README.md
docs/: ARCHITECTURE.md
solidworks_cad/: README.md
solidworks_cad/Solidworks/: Gripper assembly.SLDASM  Nut M3(4.25mm).SLDPRT  Waist.SLDPRT  arm_1.SLDPRT  arm_2.SLDPRT  arm_3.SLDPRT  base_link.SLDPRT  falcon_baselink.SLDPRT  gear_1.SLDPRT  gear_2.SLDPRT  gripper tip 2 mirrored version.SLDPRT  gripper_link.SLDPRT  gripper_tip.SLDPRT  m3nut_6mm.SLDPRT  robot_gripper_base.SLDPRT  servo_motor_mg996r.SLDPRT  servo_motor_micro_9g.SLDPRT
solidworks_cad/stl/: Robotic Arm Assembly - Gripper assembly-1 gear_1-3.STL  Robotic Arm Assembly - Gripper assembly-1 gear_2-1.STL  Robotic Arm Assembly - Gripper assembly-1 gripper tip 2 mirrored version-1.STL  Robotic Arm Assembly - Gripper assembly-1 gripper_link-1.STL  Robotic Arm Assembly - Gripper assembly-1 gripper_link-2.STL  Robotic Arm Assembly - Gripper assembly-1 gripper_link-3.STL  Robotic Arm Assembly - Gripper assembly-1 gripper_link-4.STL  Robotic Arm Assembly - Gripper assembly-1 gripper_tip-2.STL  Robotic Arm Assembly - Gripper assembly-1 robot_gripper_base-1.STL  Robotic Arm Assembly - Gripper assembly-1 servo_motor_micro_9g-1.STL  Robotic Arm Assembly - Nut M3(4.25mm)-1.STL  Robotic Arm Assembly - Nut M3(4.25mm)-2.STL  Robotic Arm Assembly - Waist-1.STL  Robotic Arm Assembly - arm_1-1.STL  Robotic Arm Assembly - arm_2-1.STL  Robotic Arm Assembly - arm_3-1.STL  Robotic Arm Assembly - base_link-1.STL  Robotic Arm Assembly - falcon_baselink-1.STL  Robotic Arm Assembly - m3nut_6mm-1.STL  Robotic Arm Assembly - pan head cross recess screw_iso-22.STL  Robotic Arm Assembly - pan head cross recess screw_iso-24.STL  Robotic Arm Assembly - pan head cross recess screw_iso-25.STL  Robotic Arm Assembly - pan head cross recess screw_iso-28.STL  Robotic Arm Assembly - pan head cross recess screw_iso-29.STL  Robotic Arm Assembly - pan head cross recess screw_iso-32.STL  Robotic Arm Assembly - pan head cross recess screw_iso-34.STL  Robotic Arm Assembly - pan head cross recess screw_iso-35.STL  Robotic Arm Assembly - pan head cross recess screw_iso-36.STL  Robotic Arm Assembly - pan head cross recess screw_iso-8.STL  Robotic Arm Assembly - servo_motor_mg996r-1.STL  Robotic Arm Assembly - servo_motor_mg996r-2.STL  Robotic Arm Assembly - servo_motor_mg996r-3.STL  Robotic Arm Assembly - servo_motor_micro_9g-1.STL  Robotic Arm Assembly - servo_motor_micro_9g-2.STL
src/falcon_arm_bringup/: CMakeLists.txt  package.xml
src/falcon_arm_bringup/config/: falcon_controllers.yaml
src/falcon_arm_bringup/launch/: falcon_arm_bringup.launch.py  falcon_arm_hw.launch.py  falcon_arm_moveit_sim.launch.py  falcon_arm_servo_sim.launch.py  falcon_arm_sim.launch.py  falcon_arm_teleop_sim.launch.py
src/falcon_arm_gazebo/: CMakeLists.txt  package.xml
src/falcon_arm_gazebo/launch/: gazebo.launch.py  sim_bare.launch.py  sim_bringup.launch.py  sim_robot.launch.py
src/falcon_arm_gazebo/worlds/: falcon_arm_world.sdf
src/falcon_arm_hardware/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SERIAL_PROTOCOL.md  example_ros2_control_config.xacro  falcon_arm_hardware_plugins.xml  package.xml
src/falcon_arm_hardware/include/falcon_arm_hardware/: falcon_arm_hardware_interface.hpp
src/falcon_arm_hardware/src/: falcon_arm_hardware_interface.cpp
src/falcon_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/falcon_arm_moveit_config/config/: falcon_robotic_arm.ros2_control.xacro  falcon_robotic_arm.urdf.xacro  falcon_robotic_arm_description.ros2_control.xacro  falcon_robotic_arm_description.srdf  falcon_robotic_arm_description.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  servo.yaml
src/falcon_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/falcon_arm_teleop/: CMakeLists.txt  package.xml
src/falcon_arm_teleop/launch/: slider_teleop.launch.py  teleop.launch.py
src/falcon_arm_teleop/src/: joy_servo.py  joy_teleop.py  slider_teleop.py
src/falcon_robotic_arm_description/: CMakeLists.txt  package.xml
src/falcon_robotic_arm_description/config/: bridge.yaml  display.rviz  falcon_controllers.yaml  ros_gz_bridge_gazebo.yaml
src/falcon_robotic_arm_description/launch/: display.launch.py  gazebo.launch.py  ros2_control.launch.py
src/falcon_robotic_arm_description/meshes/collision/: base_link.STL  gripper_link_2.STL
src/falcon_robotic_arm_description/meshes/visual/: gripper_link_1.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
src/falcon_robotic_arm_description/urdf/: falcon_robotic_arm.gazebo  falcon_robotic_arm.ros2control.xacro  falcon_robotic_arm.xacro  materials.xacro
src/serial/: CMakeLists.txt
